--- a/ui/android/app/src/main/AndroidManifest.xml
+++ b/ui/android/app/src/main/AndroidManifest.xml
@@ -1,5 +1,5 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.ui">
+    package="com.tradetaj.ui">
    <application
         android:label="ui"
         android:name="${applicationName}"
